# riff.jv

./: .gitignore  Dockerfile.act  README.md  pom.xml
.act/workflows/: maven.act.yml
.github/workflows/: maven.yml
base/riff/: pom.xml
base/riff-bom/: pom.xml
base/riff-dependencies/: pom.xml
base/riff-parent/: pom.xml
codequality/checkstyle/: checkstyle-suppressions.xml  checkstyle.xml
docs/design/: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/design/docs/: index.md  license.md
docs/design/docs/authentication/: index.md
docs/design/docs/database/: index.md  mysql.md  tables.md
docs/design/docs/job/: index.md  scheduler.md
docs/design/v1.0.0/: v1.0.0.md
infras/riff-core/: pom.xml
infras/riff-infras-authentication/: pom.xml
infras/riff-infras-authentication/riff-infras-authentication-api/: pom.xml
infras/riff-infras-common/: pom.xml
infras/riff-infras-crypto/: pom.xml
infras/riff-infras-exception/: pom.xml
infras/riff-infras-ioc/: pom.xml
infras/riff-infras-ioc/riff-infras-ioc-binder/: pom.xml
infras/riff-infras-model/: pom.xml
infras/riff-infras-transport/: pom.xml
infras/riff-startup/: pom.xml
infras/riff-storage/: pom.xml
middleware/riff-middleware-database/: pom.xml
riff-apiserver/: pom.xml
riff-core/: pom.xml
riff-proxy/: pom.xml
riff-scheduler/: pom.xml
riff-startup/: pom.xml
riff-startup/riff-startup-core/: pom.xml
riff-startup/riff-startup-printer/: pom.xml
riff-storage/: pom.xml
riff-storage/riff-storage-postgresql/: pom.xml
riffctl/: Makefile  pom.xml
rifflet/: pom.xml
(+199 files in other folders)
